--- a/index.html
+++ b/index.html
@@ -5,13 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Site</title>
-    
-   
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./styles/contact-form.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="https://kit.fontawesome.com/4d56a16234.js" crossorigin="anonymous"></script>
+    <script src="https://fonts.googleapis.com/css?family=Roboto:400,700&;#39;"></script>
 </head>
 <body>
-   <div>
-     Hello World
-   </div>
+    <div id="control">
+        <div class="wrap">
+          <div class="slider"></div>
+          <ul class="tabs-block">
+            <li>Home</li>
+            <li>About</li>
+            <li>Portfolio</li>
+            <li>Contact Me</li>
+          </ul>
+        </div>
+        <div class="article-block">
+          <div class="container" >
+          <div id='picHome'>
+          <div class="article" id="article1">
+            <h1>Home</h1>
+            
+            <h1 class='homeScreen'>Georgi Nikolov The
+              <span class="txt-type" data-wait="3000" data-words='["Developer", "Creator", "Designer"]'></span></h1>
+              <h2  >Welcome To My Website</h2>
+          </div>
+          </div>
+          </div>
+        </div>
+    </div>
 </body>
+<script src="./js/typeWriter.js"></script>
 
 </html>
