about page html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           </div>
           </div>
         </div>
+        <div class="article" id="article2">
+      
+          <div class='about-div'>
+            <h1 style='margin-bottom:80px'>About Me</h1>
+            <p id='description'>Solutions-driven full-stack web-developer leveraging experience in hospotality industry. I will solve all of your problems or some problems. I can solve A problem.
+          </div>
+          <img src="./images/Wedding_me2.jpg" id='profilePic'>
+        </div>
     </div>
 </body>
 <script src="./js/typeWriter.js"></script>
