portfolio html, all img

--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
           </div>
           <img src="./images/Wedding_me2.jpg" id='profilePic'>
         </div>
+        <div class="article" id="article4">
+          <div class="a">
+            <h1>Portfolio</h1>
+            <h3>Perfect Server is a virtual  waiter that guides customers through a single-page menu leveraging personal preferences.</h3><h4> A tourist guide showcasing the worst rated places in the area is found in the Don't Go There web-page.</h4><h5> Fun and interactive game of dice.</h5>
+    
+          </div>
+          
+          <a href="https://server-perfect.herokuapp.com/" target="_blank" class="pfo b"><img class='b' src="./images/rest1.jpg"></a> 
+          <a href="https://durostorum.github.io/Dont-Go-There/" class="pfo c" target="_blank"><img src="./images/TrashCan.png"></a >
+          <a href='https://durostorum.github.io/Dice-Game/' class="pfo d" target="_blank"><img  src="./images/dice.jpg"></a>
+        </div>
     </div>
 </body>
 <script src="./js/typeWriter.js"></script>
