--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
           <a href="https://durostorum.github.io/Dont-Go-There/" class="pfo c" target="_blank"><img src="./images/TrashCan.png"></a >
           <a href='https://durostorum.github.io/Dice-Game/' class="pfo d" target="_blank"><img  src="./images/dice.jpg"></a>
         </div>
+           <!-- section -->
+           <div class="article" id="article3">
+            <!-- container -->
+            <h1 class='contact-title'>Contact Me</h1>
+            <!-- Form begining -->
+            <form class="cf" name='myForm' action="https://formspree.io/f/xdoppbyg" method="POST" id='my-form'>
+              <div class="half left cf">
+                <input type="text" id="input-name" name='name' placeholder="Name" required>
+                <input   type="email" id="input-email" placeholder="Email address" required>
+                <input type="text" id="input-subject" placeholder="Subject" required> 
+              </div>
+              <div class="half right cf">
+                <textarea name="message" type="text" id="input-message" placeholder="Message" required></textarea>
+              </div>  
+              <input type="submit" value="Submit" id="input-submit">
+            </form>
+            <div id="status"></div>
+            <div id="connections" >
+           <a href="https://github.com/Durostorum"target="_blank"> <i class="fab fa-github fa-2x" style='color:burlywood'></a></i>
+           <a href="https://www.linkedin.com/in/georgi-nikolov-957a43185/">
+            <i class="fab fa-linkedin fa-2x"   style='color:burlywood'></a></i></div>
+          </div>
     </div>
 </body>
 <script src="./js/typeWriter.js"></script>
