portfolio css separated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Welcome to My Site</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
     <link rel="stylesheet" href="./styles/contact-form.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
