missing jpg added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h4 class='trashDescription'> A tourist guide showcasing the worst rated places in the area is found in the Don't Go There web-page.</h4>
             <a href="https://durostorum.github.io/Dont-Go-There/" class="pfo c" target="_blank"><img class='c'src="./images/TrashCan.png"></a >
               <h5 class='gameDescription'> Fun and interactive game of dice.</h5>
-            <a href='https://durostorum.github.io/Dice-Game/' class="pfo d" target="_blank"><img  src="../newDice.jpg"></a>
+            <a href='https://durostorum.github.io/Dice-Game/' class="pfo d" target="_blank"><img  src="./images/newDice.jpg"></a>
           </div>
           <!-- section -->
           <div class="article" id="article3">
