--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <div id="loadOverlay" style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Site</title>
@@ -86,7 +86,8 @@
       </div>
     </div>
 </body>
-<script src="./js/main.js"></script>
+
 <script src="./js/typeWriter.js"></script>
 <script src="./js/contact-form.js"></script>
+<script src="./js/main.js"></script>
 </html>
