--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="status" class=''></div>
             <div id="connections" >
            <a href="https://github.com/Durostorum"target="_blank"> <i class="fab fa-github fa-2x" style='color:burlywood'></a></i>
-           <a href="https://www.linkedin.com/in/georgi-nikolov-957a43185/">
+           <a href="https://www.linkedin.com/in/georgi-nikolov-957a43185/" target="_blank">
             <i class="fab fa-linkedin fa-2x"   style='color:burlywood'></a></i></div>
           </div>
       </div>
