--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <form class="cf" name='myForm' action="https://formspree.io/f/xdoppbyg" method="POST" id='my-form'>
               <div class="half left cf">
                 <input type="text" id="input-name" name='name' placeholder="Name" required>
-                <input   type="email" id="input-email" placeholder="Email address" required>
+                <input   type="text" id="input-email" name='_replyto' placeholder="Email address" required>
                 <input type="text" id="input-subject" placeholder="Subject" required> 
               </div>
               <div class="half right cf">
