--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W26GZZ9');</script>
+  <!-- End Google Tag Manager -->
   <div id="loadOverlay" style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2202;"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +22,10 @@
     <script src="https://fonts.googleapis.com/css?family=Roboto:400,700&;#39;"></script>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W26GZZ9"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="mainDiv">
     <div id="control">
         <div class="wrap">
@@ -41,7 +52,7 @@
       
             <div class='about-div'>
               <h1>About Me</h1>
-              <p id='description'>Solutions-driven full-stack web-developer leveraging experience in hospotality industry. I will solve all of your problems or some problems. I can solve A problem.
+              <p id='description'>Solutions-driven full-stack web-developer leveraging experience in hospotality industry. I will solve all of your problems or some problems. I can solve a problem, okay?
             </div>
             <img src="./images/Wedding_me2.jpg" id='profilePic'>
           </div>
