--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W26GZZ9');</script>
+  })(window,document,'script','dataLayer','GTM-W26GZZ9');</script>  
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'GTM-W26GZZ9');
+  </script>
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
